[project]
name = "owl-vae"
version = "0.1.0"
description = "VAEs for Open World Labs"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "jupyter>=1.1.1",
    "ray>=2.46.0",
    "torch>=2.7.0",
    "torchmetrics",
    "einops",
    "ema-pytorch",
    "vector-quantize-pytorch",
    "omegaconf",
    "wandb",
    "kornia",
    "datasets",
    "huggingface-hub",
    "muon",
    "dotenv>=0.9.9",
    "torchtyping>=0.1.5",
    "pre-commit>=4.2.0",
    "torchaudio>=2.7.0",
    "mypy>=1.15.0",
    "soundfile>=0.13.1",
    "alias-free-torch>=0.0.6",
    "torchvision>=0.22.0",
]

[tool.setuptools.packages.find]
include = ["owl_vaes*"]

[dependency-groups]
dev = [
    "basedpyright>=1.29.2",
    "owl-vae",
    "pdbpp>=0.11.6",
    "ruff>=0.11.11",
]

[tool.uv.sources]
muon-optimizer = { git = "https://github.com/KellerJordan/Muon" }
owl-vae = { workspace = true }
